--- a/src/_partials/header.pug
+++ b/src/_partials/header.pug
@@ -1,2 +1,6 @@
 mixin header
-	+b.HEADER
+	+b.HEADER.header
+		+b.header__inner.indent
+			+e.logo
+				img.image(src="img/Logo.png", alt="logo")
+			+e.BUTTON.registration hello
