--- a/src/_partials/main_screen.pug
+++ b/src/_partials/main_screen.pug
@@ -1,1 +1,8 @@
 mixin main_screen 
+	+b.main
+		+b.main-inner
+			+b.main-content.indent
+				+e.P.title Get 100% bonus 
+				+e.P.sub-titleon the 1st deposit 
+				+e.P.sub-titleon up to 8000 INR
+				+e.BUTTON.btn-main HELLO
