--- a/src/css/style.sass
+++ b/src/css/style.sass
@@ -1,2 +1,37 @@
 *, *:after, *:before
 	box-sizing: border-box
+.indent
+	margin: 0 285px
+.header
+	height: 80px
+	width: 100%
+	background-color: #1A5685
+	display: flex
+
+	&__inner
+		width: 70%
+		display: flex
+		align-items: center
+		justify-content: space-between
+
+	&__registration
+		background-color:  #82B032
+		border: 0
+		height: 30px
+		width: 150px
+		color: white
+
+.main
+	background-image: url('../img/Main screen_back.png')
+	height: 54vh
+	background-repeat: no-repeat
+	margin-top: -3px
+	
+	&-inner
+		height: 100%
+		display: flex
+		align-items: center
+
+	&-content
+		color: #fff
+
