layout is ready

--- a/src/_partials/footer.pug
+++ b/src/_partials/footer.pug
@@ -1,3 +1,16 @@
 mixin footer
-	+b.FOOTER
-		
+	+b.FOOTER.footer
+		+e.inner
+			+e.IMG(src="img/Skrill.png" alt="icon-partner")
+			+e.IMG(src="img/Neteller.png" alt="icon-partner")
+			+e.IMG(src="img/Bitcoin.png" alt="icon-partner")
+			+e.IMG(src="img/COD.png" alt="icon-partner")
+			+e.IMG(src="img/jeton-wallet.png" alt="icon-partner")
+			+e.IMG(src="img/AstroPay.png" alt="icon-partner")
+			+e.IMG(src="img/VISA.png" alt="icon-partner")
+			+e.IMG(src="img/WEBMONEY.png" alt="icon-partner")
+			+e.IMG(src="img/ECO.png" alt="icon-partner")
+			+e.IMG(src="img/PM.png" alt="icon-partner")
+			+e.IMG(src="img/PAYEER.png" alt="icon-partner")
+			+e.IMG(src="img/EPAY.png" alt="icon-partner")
+			+e.IMG(src="img/Sticpay.png" alt="icon-partner")
