--- a/src/_partials/header.pug
+++ b/src/_partials/header.pug
@@ -3,4 +3,4 @@ mixin header
 		+b.header__inner.indent
 			+e.logo
 				img.image(src="img/Logo.png", alt="logo")
-			+e.BUTTON.registration hello
+			+e.BUTTON.registration.btn-green Registration
