--- a/src/_partials/main_screen.pug
+++ b/src/_partials/main_screen.pug
@@ -2,7 +2,10 @@ mixin main_screen
 	+b.main
 		+b.main-inner
 			+b.main-content.indent
-				+e.P.title Get 100% bonus 
-				+e.P.sub-titleon the 1st deposit 
-				+e.P.sub-titleon up to 8000 INR
-				+e.BUTTON.btn-main HELLO
+				+e.P.title Get 100% bonus
+				+b.sub-title
+					+e.P on the 1st deposit 
+					+e.P up to 8000 INR
+				+e.BUTTON.btn-main.btn-green jOIN now
+			+b.player-block
+				+e.IMG.human(src="img/cricket_player.png", alt="logo")
