--- a/src/index.pug
+++ b/src/index.pug
@@ -3,6 +3,8 @@ include bemto/bemto.pug
 //- include partials
 include _partials/header.pug
 include _partials/main_screen.pug
+include _partials/second-block.pug
+include _partials/about.pug
 include _partials/footer.pug
 doctype html 
 html
@@ -13,12 +15,15 @@ html
 		link(rel="stylesheet" type="text/css" href="css/all_style.css")
 		//- include animate.css
 		link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css")
+		link(href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500,500i,700,700i,900,900i&display=swap" rel="stylesheet")
 		meta(charset="utf-8")
 		meta(name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no")
 
 	body
 		+header
 		+main_screen
+		+second-block
+		+about
 		+footer
 
 
